more topbar-related spacing fixes

--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -231,12 +231,13 @@ h1, h2, h3, h4, h5 {
   background: url('/img/line.png') bottom right no-repeat;
   padding:0;
   margin-bottom:0.3em;
-  margin-top:0em;
-  padding-top: 2em;
+  margin-top:-1em;
+  padding-top: 2.1em;
 }
 
 li h1, li h2, li h3, li h4, li h5 {
-  padding-top: 1em;
+  padding-top: 2em;
+  margin-top: -1.5em;
 }
 
 h1 {
